--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Keras</title>
+  <title>Image Recognition</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
   <style>
     .hidden{display: none;}
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col">
-      <h1>Keras</h1>
+      <h1>Image Recognition</h1>
     </div>
   </div>
 
