Hide upload file button.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
 
   <div class="row">
     <div class="col">
-      <img class="img-fluid thumbnail" src="https://s1-f.scribdassets.com/images/upload/Upload_Upload.svg">
-    </div>
-  </div>
+      <a href="#">
+        <img class="img-fluid thumbnail" src="https://s1-f.scribdassets.com/images/upload/Upload_Upload.svg">
+      </a>
 
-  <div class="row">
-    <div class="col">
-      <input type="file" class="upload">
+      <input type="file" class="upload hidden">
       <canvas class="canvas hidden"></canvas>
     </div>
   </div>
@@ -45,6 +43,7 @@
 </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/keras-js/0.3.0/keras.js"></script>
 <script src="imagenet-classes.js"></script>
 <script src="bundle.js"></script>
